--- a/recipe/templates/recipeDescription.html
+++ b/recipe/templates/recipeDescription.html
@@ -8,23 +8,25 @@
     />
 </head>
 <body>
-
-      <header id="header">
-              <h1>CS235 Recipe Portal</h1>
-              <div class="copyright">&copy; UPI1 | UPI2 | UPI3 (Write your full names or UPIs)</div>
-            </header>
-            <div id="container">
-              <main id="main">
-                <div class="description">
-                  <br>
-                    <h2>{{ recipe.name  }}</h2>
-                     <p><i>Author:</i> {{ recipe.author.name }} </p>
-                    <p><i>About:</i> {{ recipe.description }} </p>
-                    <p><i>Image URL: </i><img src="{{ recipe.images[1] }}" alt="recipe.name"> </p>
-
-                </div>
-              </main>
-            </div>
-
+<header>
+    {% include 'header.html' %}
+</header>
+<div class="recipe-of-the-day">
+<h1>Recipes of the Day</h1>
+<ul class="recipe-list">
+    {% for recipe in recipes %}
+        <li class="recipe-card">
+        <a href="#">
+            <img src="{{ recipe.images }}" alt="Recipe Image">
+            <p class="name">{{ recipe.name}}</p>
+            <p class="desc">{{ recipe.description}}</p>
+        </a>
+    </li>
+    {% endfor %}
+</ul>
+</div>
+<footer>
+    {% include 'footer.html' %}
+</footer>
 </body>
 </html>
