update header: change "ABOUT" to "HOME" add homepage blueprint

--- a/recipe/templates/header.html
+++ b/recipe/templates/header.html
@@ -37,7 +37,7 @@
               <a href="#">Drinks</a>
             </div>
           </li>
-          <li><a href="#">ABOUT</a></li>
+          <li><a href="{{ url_for('home_bp.home')}}">HOME</a></li>
         </ul>
       </nav>
 
