--- a/recipe/templates/recipeDescription.html
+++ b/recipe/templates/recipeDescription.html
@@ -13,29 +13,29 @@
     {% include 'header.html' %}
 </header>
 <div class="recipe-of-the-day">
-<h1>Recipes of the Day</h1>
-<ul class="recipe-list">
-    {% for recipe in recipes %}
-        <li class="recipe-card">
-        <a href="#">
-            <img src="{{ recipe.images[0] }}" alt="Recipe Image">
-            <p class="name">{{ recipe.name}}</p>
-            <p class="desc">{{ recipe.description}}</p>
-        </a>
-        </li>
-    {% endfor %}
-</ul>
+    <h1>Recipes of the Day</h1>
+    <ul class="recipe-list">
+        {% for recipe in recipes %}
+            <li class="recipe-card">
+            <a href="#">
+                <img src="{{ recipe.images[0] }}" alt="Recipe Image">
+                <p class="name">{{ recipe.name}}</p>
+                <p class="desc">{{ recipe.description}}</p>
+            </a>
+            </li>
+        {% endfor %}
+    </ul>
 </div>
 <div class="Categories">
     <h1>Top view Categories</h1>
     <ul class="category-list">
         {% for category in categories %}
-        <li class="category-card">
-            <a href="#">
-                <img  src="https://img.sndimg.com/food/image/upload/w_555,h_416,c_fit,fl_progressive,q_95/v1/img/recipes/84/pickFstbF.jpg" alt="Category Image">
-                <p class="name">{{ category.name }}</p>
-            </a>
-        </li>
+            <li class="category-card">
+                <a href="#">
+                    <img  src= "{{ category.recipes[0].images[0] }}" alt="Category Image">
+                    <p class="name">{{ category.name }}</p>
+                </a>
+            </li>
         {% endfor %}
     </ul>
 </div>
