update readme file

--- a/recipe/templates/header.html
+++ b/recipe/templates/header.html
@@ -30,7 +30,7 @@
               <svg class="chev" viewBox="0 0 24 24"><path d="m6 9 6 6 6-6"/></svg>
             </a>
             <div class="dropdown" role="menu">
-              <a href="#">All Recipes</a>
+              <a href="#">Pie</a>
               <a href="#">Quick &amp; Easy</a>
               <a href="#">Weeknight Dinners</a>
               <a href="#">Vegetarian</a>
