--- a/recipe/templates/home.html
+++ b/recipe/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipe Description</title>
+    <title>Home</title>
     <link
       rel="stylesheet" href="../static/css/main.css"
     />
