--- a/recipe/static/css/header.css
+++ b/recipe/static/css/header.css
@@ -177,3 +177,9 @@ nav{
 .search-form-inline button .icon {
   display: block;
 }
+
+button[disabled] {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
